Adjusted style issues on mobile devices

--- a/client/src/app/portfolio/home/home.component.scss
+++ b/client/src/app/portfolio/home/home.component.scss
@@ -62,3 +62,7 @@
 .home-container {
   padding-bottom: 150px;
 }
+
+.space {
+  width: 20px;
+}
